# cc-cobol-vm

./: Cargo.toml
scripts/: package-superbol.sh  vm-build.sh  vm-git-check.sh  vm-install.sh  vm-start.sh
src/: http_static_server.rs  main.rs
superkix-server/static/templates/: index.html
