[package]
name = "cc-cobol-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tower = {version = "0.5.0", features = ["util"]}
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tokio-util = "0.7.11"